Sun Oct 21 20:41:07 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/traits/MeshTraitsBuilder.java: Always add
	TRIANGLES attribute, we can do nothing if this attribute is unset.
	* src/org/jcae/mesh/amibe/ds/AdjacencyWrapper.java
	  src/org/jcae/mesh/amibe/ds/TriangleVH.java:  Move
	{get,set}AdjLocalNumber() methods from AdjacencyWrapper into
	TriangleVH.
	* src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java: Let tri member be
	a TriangleVH instance instance of Triangle.
	* src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java: Remove getAdj()
	and setAdj() methods, and add a new hasSymmetricEdge() method.

Sat Oct 20 00:13:49 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Use MARKED
	flag instead of HalfEdge.notOriented().
	* src/org/jcae/mesh/amibe/ds/TriangleVH.java: AdjacencyVH.adj member
	can be an array of TriangleVH instances.

Fri Oct 19 16:59:54 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/HalfEdge.java: Change 'attributes' type
	from int to byte.

Thu Oct 18 18:13:12 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java
	  src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java
	  src/org/jcae/mesh/amibe/ds/HalfEdge.java
	  src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java: Modify
	implementation of non-manifold edges.  Non-manifold edges with the
	same support are now linked through a circular doubly-linked list,
	and no more with a LinkedHashMap.  This way, HalfEdge.sym member
	can be an HalfEdge instance, which removes many special cases.

Tue Oct 16 16:28:26 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/AbstractTriangle.java: Let 'vertex'
	member be an AbstractVertex array.
	* src/org/jcae/mesh/amibe/ds/ElementFactory.java (createVertex): If
	adjacency relations are requested, this method creates a Vertex